--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "@testing-library/user-event": "^7.1.2",
         "antd": "^4.1.3",
         "gh-pages": "^2.2.0",
+        "less": "^3.11.1",
+        "less-loader": "^5.0.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.1"
